deploy/azure/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-backend
spec:
  selector:
    matchLabels:
      app: scc-backend
  template:
    metadata:
      labels:
        app: scc-backend
    spec:
      containers:
        - name: scc-backend
          image: git.d464.sh/diogo464/scc-backend
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/data
              name: scc-backend-pvc
      volumes:
        - name: scc-backend-pvc
          persistentVolumeClaim:
            claimName: scc-backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: scc-backend
spec:
  type: LoadBalancer
  selector:
    app: scc-backend
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-worker-user-scrub
spec:
  selector:
    matchLabels:
      app: scc-worker-user-scrub
  template:
    metadata:
      labels:
        app: scc-worker-user-scrub
    spec:
      containers:
        - name: scc-worker-user-scrub
          image: git.d464.sh/diogo464/scc-worker
          args: [scc.worker.UserScrub]
          resources:
            limits:
              memory: "128Mi"
              cpu: "80m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-worker-auction-close
spec:
  selector:
    matchLabels:
      app: scc-worker-auction-close
  template:
    metadata:
      labels:
        app: scc-worker-auction-close
    spec:
      containers:
        - name: scc-worker-auction-close
          image: git.d464.sh/diogo464/scc-worker
          args: [scc.worker.AuctionClose]
          resources:
            limits:
              memory: "128Mi"
              cpu: "80m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-worker-auction-popularity-consumer
spec:
  selector:
    matchLabels:
      app: scc-worker-auction-popularity-consumer
  template:
    metadata:
      labels:
        app: scc-worker-auction-popularity-consumer
    spec:
      containers:
        - name: scc-worker-auction-popularity-consumer
          image: git.d464.sh/diogo464/scc-worker
          args: [scc.worker.AuctionPopularityConsumer]
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
