deploy/azure/mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-mongodb
spec:
  selector:
    matchLabels:
      app: scc-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scc-mongodb
    spec:
      containers:
        - name: scc-mongodb
          image: docker.io/mongo:5.0.14
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: scc-mongodb
spec:
  selector:
    app: scc-mongodb
  ports:
    - port: 27017
