deploy/azure/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-rabbitmq
spec:
  selector:
    matchLabels:
      app: scc-rabbitmq
  template:
    metadata:
      labels:
        app: scc-rabbitmq
    spec:
      containers:
        - name: scc-rabbitmq
          image: rabbitmq
          resources:
            limits:
              memory: "196Mi"
              cpu: "500m"
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - mountPath: /usr/local/configs
              name: scc-rabbitmq-config-vol
      volumes:
        - name: scc-rabbitmq-config-vol
          configMap:
            name: scc-rabbitmq-cmap
            items:
              - key: config
                path: rabbitmq.config
              - key: plugins
                path: enabled_plugins
---
apiVersion: v1
kind: Service
metadata:
  name: scc-rabbitmq
spec:
  selector:
    app: scc-rabbitmq
  ports:
    - port: 5672
