deploy/azure/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-redis
spec:
  selector:
    matchLabels:
      app: scc-redis
  template:
    metadata:
      labels:
        app: scc-redis
    spec:
      containers:
        - name: scc-redis
          image: docker.io/redis:7.0.5
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: scc-redis
spec:
  selector:
    app: scc-redis
  ports:
    - port: 6379
